name:                cparens
version:             0.1.0.1
synopsis:            Parenthesize C operators
-- description:
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           Copyright (C) 2018 Anthony Cowley
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable cparens
  main-is:             Main.hs
  build-depends:       base >=4.11 && <5, language-c >= 0.8.1, pretty
  default-language:    Haskell2010
